// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CfcActionBar component 1`] = `
<h3>
  muyaho
</h3>
`;

exports[`CfcContainer component 1`] = `
<div
  class="cfc-container"
  data-testid="cfc-container"
>
  <div
    class="cfc-content-list"
    data-testid="cfc-content-list"
  >
    <ul>
      <li>
        123
      </li>
      <li>
        456
      </li>
    </ul>
  </div>
</div>
`;

exports[`CfcContentList component 1`] = `
<div
  class="cfc-content-list"
  data-testid="cfc-content-list"
>
  <ul>
    <li>
      123
    </li>
    <li>
      456
    </li>
  </ul>
</div>
`;

exports[`CfcSectionTitle component 1`] = `
<h3>
  muyaho
</h3>
`;
